Bug 244596 - Deleting a folder doesn't delete its subfolders.
Summary: Deleting a folder doesn't delete its subfolders.
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: unspecified
Platform: Debian unstable Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-14 12:11 UTC by Ludwig Reiter
Modified: 2010-07-28 00:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-07-14 12:11:44 UTC
Version:           unspecified (using Devel) 
OS:                Linux

version:4.4.4.e5.20100709.1148005-kk1.1149023

Reproducible: Always

Steps to Reproduce:
1. Create a folder t1
2. Create a subfolder of t1 named t2
3. Create a subfolder of t2 named t3
4. Copy three testmails to all folders.
5. Delete folder t1 (menu).


Actual Results:  
The folder disappeared and then a grey folder t1 appeared.

Expected Results:  
The folder t1 and the subfolders are deleted.
Comment 1 Leo Franchi 2010-07-28 00:06:38 UTC
SVN commit 1155702 by lfranchi:

Fix bug where subfolders were not deleted when parent was deleted.

BUG: 244596


 M  +1 -1      kmmainwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1155702