Fix bug where subfolders were not deleted when parent was deleted.

BUG: 244596

svn path=/branches/KDE/4.5/kdepim/; revision=1155702